--- a/qs/static/scss/user.scss
+++ b/qs/static/scss/user.scss
@@ -1,5 +1,13 @@
 @charset "UTF-8";
 
+//helps
+@import "helps/variables";
+@import "helps/functions";
+@import "helps/placeholders";
+@import "helps/mixins";
+
+@import "compass";
+
 .login-box{
 	width: 300px;
 	margin: 0 auto;
