--- a/qs/static/css/base.css
+++ b/qs/static/css/base.css
@@ -21,6 +21,9 @@
 .container-fluid {
   max-width: 1000px; }
 
+.itss-content {
+  padding: 60px 0; }
+
 header {
   background: #f5f5f5;
   border-bottom: 1px solid #e5e5e5;
