--- a/qs/templates/qs/base.html
+++ b/qs/templates/qs/base.html
@@ -65,7 +65,7 @@
   {% include "partial/_header.html" %}
     <!-- include subheader -->
   <!--container-question-->
-  <div class="container">
+  <div class="container itss-content">
     {% block mainbody %}
 
      {% endblock %}
@@ -87,7 +87,6 @@
 
   <script>
     window.onload=function(){
-
       var editor = new Editor();
       editor.render();
     }
