--- a/qs/templates/qs/edit.html
+++ b/qs/templates/qs/edit.html
@@ -1,16 +1,25 @@
 {% extends "qs/base.html" %}
 
-{% block mainbody %}
-
-    <form method="post" >
-        {% csrf_token %}
-        {{ form.as_p }}
-
-        <div class="pull-right">
-            <button type="submit" class="btn" name="draft">保存到草稿</button>
-            <button type="submit" class="btn" name="publish">保存并发布</button>
-        </div>
-    </form>
-
+{% load staticfiles%}
+{% block head %}
+<link rel="stylesheet" href=" {%static 'css/edit.css' %}">
 {% endblock %}
-
+{% block mainbody %}
+<div class="edit-qa-box">
+	<form method="post">
+		<h2 class="title">新增知识点</h2>
+		<div class="row">
+			<label for="">标题:</label>
+			<input type="text" class="form-control" value="" placeholder="一句话说清楚你要解决的问题"></div>
+		<div class="row">
+			<label for="">标签:</label>
+			<input type="text" class="form-control" value="" placeholder="如: PHP,python"></div>
+		{% csrf_token %}
+        {{ form.as_p }}
+		<div class="pull-right">
+			<button type="submit" class="btn btn-default" name="draft">存草稿</button>
+			<button type="submit" class="btn btn-default" name="publish">发布知识点</button>
+		</div>
+	</form>
+</div>
+{% endblock %}
