--- a/qs/static/scss/layout/_header.scss
+++ b/qs/static/scss/layout/_header.scss
@@ -4,14 +4,18 @@ header{
 	background:#f5f5f5;
 	border-bottom: 1px solid $border;
 	box-shadow: 0 2px 3px $border;
-	
 	h1{
 		font-size: 20px;
 		line-height: 50px;
 		margin: 0;
 		padding: 0;
 	}
-
+	.main-text{
+		text-decoration: none;
+		&:hover{
+			text-decoration: none;
+		}
+	}
 	.logo{
 		font-size: 30px;
 		color: #000;
@@ -23,10 +27,47 @@ header{
 	}
 
 	.form-group{
-		width: 85%;
-
+		width: 100%;
 		input.form-control{
 			width: 100%;
+		}
+	}
+
+	.search-form{
+		&>div{
+			position: relative;
+			padding-right: 30px;
+			font-size: 0;
+			border-radius: 4px;
+			border: 1px solid $border;
+		}
+		.form-control{
+			font-size: 14px;
+			height: 30px;
+			//line-height: 20px;
+			border: 0;
+			border-radius: 0;
+		}
+		.btn{
+			position: absolute;
+			width: 30px;
+			height: 30px;
+			padding:0;
+			text-align: center;
+			line-height: 30px;
+			top: 0;
+			right: 0;
+			border: 0;
+			outline: 0;
+			box-shadow: 0;
+			border-radius: 0;
+			&:hover,
+			&:active{
+				border: 0;
+				outline: 0;
+				background: #fff;
+				color:$active;
+			}
 		}
 	}
 
@@ -36,8 +77,10 @@ header{
 
 	.search{
 		padding: 3px 0;
-	}	
-
+	}
+	.navbar-nav{
+		margin: 0 0;
+	}
 	.nav-tabs{
 		border: 0; // drop border
 	}
@@ -46,6 +89,13 @@ header{
 	}
 	.nav-tabs>li.active>a{
 		border: 0; // drop border
+	}
+
+	.navbar-right{
+		margin: 0 -15px;
+	}
+	.dropdown>a{
+		padding:15px 10px;
 	}
 }
 
