--- a/qs/templates/partial/_header.html
+++ b/qs/templates/partial/_header.html
@@ -3,19 +3,20 @@
 		<div class="row">
 
 			<div class="col-md-2 text-center">
-				<h1><a href="/">ITSS Repository</a></h1>
+				<h1><a class="main-text" href="/">ITSS Repository</a></h1>
 			</div>
 			<div class="col-md-7">
 				<div class="row">
 					<div class="col-md-7">
 						<!-- search -->
-						<form class="navbar-form" action="">
+						<form class="navbar-form search-form" action="">
+							<div>
 							<div class="form-group">
 								<input type="text" class="form-control" placeholder="Search">
 							</div>
 							<button type="submit" class="btn btn-default">
 								<i class="glyphicon glyphicon-search"></i>
-							</button>
+							</button></div>
 						</form>
 					</div>
 					<div class="col-md-5">
