--- a/qs/templates/qs/index.html
+++ b/qs/templates/qs/index.html
@@ -39,8 +39,8 @@
 				</div>
 				<div class="content">
 					<div class="info">
-						<a class="name" href="">悲伤的泥流成河</a>
-						<a class="time" href="">2小时前回答</a>
+						<a class="name" href="">{{ item.author }}</a>
+						<a class="time" href="">{{ item.created }}</a>
 					</div>
 					<h2 class="title"><a href="{% url 'detail'  pk=item.pk|default:1%}">{{item.title}}</a></h2>
 					<ul class="taglist">
