--- a/qs/templates/qs/index.html
+++ b/qs/templates/qs/index.html
@@ -77,7 +77,7 @@
 						<a class="name" href="">悲伤的泥流成河</a>
 						<a class="time" href="">2小时前回答</a>
 					</div>
-					<h2 class="title"><a href="">关于操作php 数组，进行相关计算的问题关于操作php 数组，进行相关计算的问题关于操作php 数组，进行相关计算的问题</a></h2>
+					<h2 class="title"><a href="">关于操作php 数组，进行相关计算的问题关于操作php 数组，进行相关计算的问题关于操作php dfa;dfjlasjdf;ljdf;lajdfkljad;fjlkdjflasjdfhgghhhhhhhhhfhladfkahdhfalfjhdfkjaldfaldjfhadjkfhaklj 数组，进行相关计算的问题</a></h2>
 					<ul class="taglist">
 						<li class="tagpopup">
 							<a href="" class="tag tag-sm">PHP</a>
