修改模型数据结构，完善首页部分显示功能

--- a/qs/templates/qs/edit.html
+++ b/qs/templates/qs/edit.html
@@ -8,14 +8,7 @@
 <div class="edit-qa-box">
 	<form method="post">
 		<h2 class="title">新增知识点</h2>
-<!-- 		<div class="row">
-			<label for="">标题:</label>
-			<input type="text" class="form-control" value="" placeholder="一句话说清楚你要解决的问题"></div>
-		<div class="row">
-			<label for="">标签:</label>
-			<input type="text" class="form-control" value="" placeholder="如: PHP,python">
-		</div> -->
-		<!-- {% csrf_token %} -->
+		 {% csrf_token %}
 		<div class="edit-box">
 			 {{ form.as_p }}
 		</div>
