--- a/qs/templates/qs/index.html
+++ b/qs/templates/qs/index.html
@@ -28,12 +28,12 @@
 					</div>
 					<div class="tag-item">
 						<span class="tag-default tag-red">
-							 <small>回答</small>
+						{{ item.count_solution }}	 <small>回答</small>
 						</span>
 					</div>
 					<div class="tag-item">
 						<span class="tag-default">
-							100 <small>浏览</small>
+							{{ item.count_link }}  <small>浏览</small>
 						</span>
 					</div>
 				</div>
