--- a/qs/static/css/index.css
+++ b/qs/static/css/index.css
@@ -49,7 +49,7 @@
     background-color: #009a61; }
   .question-post-list .tag-box .tag-red {
     color: #fff;
-    background-color: #ad3a37; }
+    background-color: #327969; }
   .question-post-list .tag-box .tag-gray {
     color: #fff;
     background-color: #808b87; }
