--- a/qs/templates/partial/_header.html
+++ b/qs/templates/partial/_header.html
@@ -9,12 +9,12 @@
 				<div class="row">
 					<div class="col-md-7">
 						<!-- search -->
-						<form class="navbar-form search-form" action="">
+						<form class="navbar-form search-form" action="{% url 'qs.views.full_search' %}" method="get">
 							<div>
 							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Search">
+								<input type="text" class="form-control" placeholder="Search" name="q">
 							</div>
-							<button type="submit" class="btn btn-default">
+							<button type="submit" class="btn btn-default" >
 								<i class="glyphicon glyphicon-search"></i>
 							</button></div>
 						</form>
