--- a/qs/static/css/base.css
+++ b/qs/static/css/base.css
@@ -108,22 +108,30 @@ header {
 
 .itss-zan {
   width: 40px;
-  height: 40px;
-  border: 1px solid #e5e5e5;
-  outline: 0;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px;
   overflow: hidden;
-  font-size: 14px;
-  font-weight: 500;
-  vertical-align: middle;
-  line-height: 14px;
-  color: #999;
   background: #fff; }
-  .itss-zan .fa {
-    font-size: 20px; }
-  .itss-zan:active, .itss-zan.active {
-    color: #23527c; }
+  .itss-zan button {
+    display: block;
+    margin: 0 auto;
+    color: #999;
+    background: transparent;
+    font-size: 60px;
+    line-height: 30px;
+    padding: 0;
+    border: 0;
+    bottom: 0;
+    outline: 0; }
+    .itss-zan button:active, .itss-zan button.active {
+      color: #23527c; }
+  .itss-zan .count {
+    font-size: 20px;
+    font-weight: 500;
+    display: block;
+    height: 40px;
+    line-height: 40px;
+    text-align: center; }
 
 /*# sourceMappingURL=base.css.map */
