--- a/qs/templates/qs/index.html
+++ b/qs/templates/qs/index.html
@@ -11,8 +11,8 @@
 		<nav>
 			<ul class="nav nav-tabs">
 			  <li role="presentation" class="active"><a href="#">今日十大</a></li>
-			  <li role="presentation"><a href="#">热门的</a></li>
-			  <li role="presentation"><a href="#">未回答</a></li>
+			  <!--<li role="presentation"><a href="#">热门的</a></li>-->
+			  <!--<li role="presentation"><a href="#">未回答</a></li>-->
 			</ul>
 		</nav>
 		<div class="question-post-list">
