--- a/qs/templates/partial/_header.html
+++ b/qs/templates/partial/_header.html
@@ -1,80 +1,81 @@
 <header>
-	<div class="container-fluid">
-		<div class="row">
+    <div class="container-fluid">
+        <div class="row">
 
-			<div class="col-md-2 text-center">
-				<h1><a class="main-text" href="/">ITSS Repository</a></h1>
-			</div>
-			<div class="col-md-7">
-				<div class="row">
-					<div class="col-md-7">
-						<!-- search -->
-						<form class="navbar-form search-form" action="{% url 'qs.views.full_search' %}" method="get">
-							<div>
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Search" name="q">
-							</div>
-							<button type="submit" class="btn btn-default" >
-								<i class="glyphicon glyphicon-search"></i>
-							</button></div>
-						</form>
-					</div>
-					<div class="col-md-5">
-						<!-- nav -->
-						<nav>
-							<ul class="nav navbar-nav">
-								<li class="active">
-									<a href="">问答</a>	
-								</li>
-								<li>
-									<a href="#">文章</a>
-								</li>
-								<li>
-									<a href="#">活动</a>
-								</li>
-								<li>
-									<a href="#">榜单</a>
-								</li>
-							</ul>
-						</nav>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<ul class="nav navbar-nav navbar-right">
-					<li>
-						{% if user.is_authenticated %}
-							<a href="{% url 'new_qs' %}">新增知识</a>
-						{% endif %}
-					</li>
-					<li class="dropdown">
-						{% if user.is_authenticated %}
-						<a data-toggle="dropdown" class="dropdown-toggle" href="#">
-							{{user.username}} <strong class="caret"></strong>
-						</a>
-						<ul class="dropdown-menu">
-							<li>
-								<a href="#">我的主页</a>
-							</li>
-							<li>
-								<a href="{% url 'draft_list' %}">我的草稿</a>
-							</li>
-							<li>
-								<a href="#">帐号设置</a>
-							</li>
-							<li class="divider"></li>
-							<li>
-								<a href="{% url 'django.contrib.auth.views.logout'%}">退出</a>
-							</li>
-						</ul>
-						{% else %}
-						<li><a  href="{% url 'django.contrib.auth.views.login' %}">登录</a></li>
-						<li><a href="{% url 'register' %}">注册</a></li>
-						{% endif %}
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div>
+            <div class="col-md-2 text-center">
+                <h1><a class="main-text" href="/">ITSS Repository</a></h1>
+            </div>
+            <div class="col-md-7">
+                <div class="row">
+                    <div class="col-md-7">
+                        <!-- search -->
+                        <form class="navbar-form search-form" action="{% url 'qs.views.full_search' %}" method="get">
+                            <div>
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Search" name="q">
+                                </div>
+                                <button type="submit" class="btn btn-default">
+                                    <i class="glyphicon glyphicon-search"></i>
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-md-5">
+                        <!-- nav -->
+                        <nav>
+                            <ul class="nav navbar-nav">
+                                <li class="active">
+                                    <a href="">问答</a>
+                                </li>
+                                <li>
+                                    <a href="#">文章</a>
+                                </li>
+                                <li>
+                                    <a href="#">活动</a>
+                                </li>
+                                <li>
+                                    <a href="#">榜单</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        {% if user.is_authenticated %}
+                        <a href="{% url 'new_qs' %}">新增知识</a>
+                        {% endif %}
+                    </li>
+                    <li class="dropdown">
+                        {% if user.is_authenticated %}
+                            <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                             {{user.username}} <strong class="caret"></strong>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                   <a href="{% url 'user_index' username=user.username %}">我的主页</a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'draft_list' %}">我的草稿</a>
+                                </li>
+                                <li>
+                                    <a href="#">帐号设置</a>
+                                </li>
+                                <li class="divider"></li>
+                                <li>
+                                    <a href="{% url 'django.contrib.auth.views.logout'%}">退出</a>
+                                </li>
+                            </ul>
+                        {% else %}
+                            <li><a href="{% url 'django.contrib.auth.views.login' %}">登录</a></li>
+                            <li><a href="{% url 'register'  %}">注册</a></li>
+                        {% endif %}
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </header>
 
