--- a/user/templates/user/index.html
+++ b/user/templates/user/index.html
@@ -7,9 +7,14 @@
   {% endblock %}
 {% block mainbody %}
 
-    用户名{{ profile.username }} <hr>
-    头像<img src="http://www.gravatar.com/avatar/">
+    用户名{{ profile.user.username }} <hr>
+    头像<img src="http://www.gravatar.com/avatar/"> {{ profile.avatar_url }}<hr>
+    荣誉{{ profile.rank }} <hr>
+    {{ profile.voted }} 多少次被赞  <hr>
+    {{ profile.website }} 个人网站 <hr>
 
+    提问 {{ profile.questions }} <hr>
+    回答 {{ profile.answers }} <hr>
 
 
 
