--- a/qs/templates/partial/base.html
+++ b/qs/templates/partial/base.html
@@ -10,7 +10,7 @@
   <meta name="author" content="">
   <!--<link rel="icon" href="../../favicon.ico">
   -->
-  <title>ITSS专注解决IT行业疑难杂症</title>
+  <title> Repository</title>
 
   <!-- Bootstrap core CSS -->
   <!--<link href="http://cdn.bootcss.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
