--- a/user/templates/registration/register.html
+++ b/user/templates/registration/register.html
@@ -9,15 +9,19 @@
 {% block mainbody %}
 
 <div class="register-box">
+    {% if error_messages %}
+        {{ error_messages }}
+    {% endif%}
     <h2 class="text－center">创建账户</h2>
      <form class="form-signin" method="post" action="{% url 'register' %}">
       {% csrf_token %}
+
       <div class="row">
         <label for="username">用户名:</label>
         <br>
         <input type="text" name="username" class="form-control">
         <br>
-        <p><strong>*</strong>不多于30个字符。只能用字母、数字和字符</p>
+        <p><strong>*</strong>不多于20个字符。只能用字母、数字和下划线</p>
       </div>
 
       <div class="row">
@@ -25,16 +29,16 @@
       <br>
       <input type="password" name="password1" class="form-control">
       <br>
-    <p><strong>*</strong>请输入你自己觉得足够安全的密码</p>
+    <p><strong>*</strong>请输入你自己觉得足够安全的密码(最好大于8位)</p>
       </div>
 
-      <div class="row">
-         <label for="password">确认密码:</label>
-        <br>
-        <input type="password" name="password2" class="form-control">
-        <br>
-            <p><strong>*</strong>再次确认密码</p>
-      </div>
+      <!--<div class="row">-->
+         <!--<label for="password">确认密码:</label>-->
+        <!--<br>-->
+        <!--<input type="password" name="password2" class="form-control">-->
+        <!--<br>-->
+            <!--<p><strong>*</strong>再次确认密码</p>-->
+      <!--</div>-->
 
       <div class="row">
           <button class="btn btn-default btn-block" type="submit">注 册</button>
